--- a/sass/layout/_layout.scss
+++ b/sass/layout/_layout.scss
@@ -428,7 +428,7 @@
 
     &-image {
       display: inline-block;
-      margin: 2em;
+      margin: 0 2em 4em;
       max-width: 10em;
     }
 
